[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tvm"
version = "0.2.4"
description = "Terminal Virtual Macropad for Xorg terminals"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Carlos Mora" }
]
keywords = ["tkinter", "x11", "xdotool", "terminal", "macropad", "ubuntu"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
  "Topic :: System :: Shells",
  "Topic :: Desktop Environment",
]

[project.urls]
Homepage = "https://github.com/cmora111/tvm"
Issues = "https://github.com/cmora111/tvm/issues"

[project.scripts]
tvm = "tvm.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tvm = []
