[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termforge"
version = "0.3.3"
description = "Terminal workflow engine for X11 terminals"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Carlos Mora" }
]
keywords = [
  "tkinter",
  "x11",
  "xdotool",
  "terminal",
  "workflow",
  "macropad",
  "ubuntu"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
  "Topic :: System :: Shells",
  "Topic :: Desktop Environment",
]

dependencies = [
  "pynput>=1.7.6",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "twine>=5.1.1",
]

[project.urls]
Homepage = "https://github.com/cmora111/termforge"
Issues = "https://github.com/cmora111/termforge/issues"

[project.scripts]
termforge = "termforge.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
termforge = []
