[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termforge"
version = "0.3.4"
description = "Terminal workflow engine for X11 terminals (automation, macros, and command chains)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Carlos Mora" }
]

keywords = [
  "terminal",
  "automation",
  "workflow",
  "macros",
  "x11",
  "xdotool",
  "tkinter",
  "linux",
  "command-chains"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Utilities",
  "Topic :: System :: Shells",
  "Topic :: Desktop Environment",
]

# ✅ Runtime dependencies
dependencies = [
  "pynput>=1.7.6"
]

# ✅ Optional dev tools
[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "twine>=5.1.1",
]

[project.urls]
Homepage = "https://github.com/cmora111/termforge"
Issues = "https://github.com/cmora111/termforge/issues"
Source = "https://github.com/cmora111/termforge"

# ✅ CLI entry point
[project.scripts]
termforge = "termforge.cli:main"

# ✅ src/ layout
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# (Optional, safe placeholder)
[tool.setuptools.package-data]
termforge = []
